k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meme-generator
---
apiVersion: v1
kind: Namespace
metadata:
  name: messaging
---
apiVersion: v1
kind: Namespace
metadata:
  name: cache
---
apiVersion: v1
kind: Namespace
metadata:
  name: operators
