k8s/base/backend-deployment-init.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meme-backend
  namespace: meme-generator
spec:
  template:
    spec:
