k8s/base/nats-websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-websocket
  namespace: meme-generator
spec:
  type: ExternalName
  externalName: nats.messaging.svc.cluster.local
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: websocket
